--- a/index.html
+++ b/index.html
@@ -248,29 +248,32 @@
 							To take off, fly over the desert and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified, try to hit it with the bottle of water, remember location of the drop zone.<br>
                The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid. The plane must return to the starting point.<br>
               <br> 
+<!-- bitcoin donate -->
+                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
 						</div>
 					</div>
 				</div>
 				<div class="accordion-group">
-	    			<div class="accordion-heading">
+	    		<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
 						.why accepting bitcoins
 						</a>
-					</div>
-					  <div id="collapseThree" class="accordion-body collapse">
-						  <div class="accordion-inner">
-                <ul>
+					 </div>
+					 <div id="collapseThree" class="accordion-body collapse">
+					  <div class="accordion-inner">
+              <ul>
                 <li>works over tcp/ip</li>
                 <li>ideal internet money (no physical representation)</li>
                 <li>modern (resonates well with UAV)</li>
                 <li>it's part of the assignment</li>
                 <li>easy to use (thx Coinbase and others)</li>
                 <li>low entry barier (no bank account needed, no SSL certificates required to implement payments)</li>
-              </ul>
-              <div></div>
+              </ul><br><br>
+<!-- bitcoin donate -->
+                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
 						</div>
 					</div>
-				</div>		
+			  </div>		
         <div class="accordion-group">
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
@@ -289,7 +292,9 @@
                 - bottle release mechanism (actually dropping the bottle from the plane);<br>
                 - automation (#dronesdronesdrones).<br>
                 Distant future:<br>
-                - ask Kenn ;)
+                - ask Kenn ;)<br><br>
+<!-- bitcoin donate -->
+                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>               
                </div>
              </div>
         </div>
