final of the day

--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 							To take off, fly over the desert and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified, try to hit it with the bottle of water, remember location of the drop zone.<br>
                The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid. The plane must return to the starting point.<br>
               <br> 
+              The other challenge (short-term) is the <a href="http://startupmooc.org/">course leaderboard</a> where I entered this project and the generated social and financial feedback is bein measuerd. That could explain all the donate/tweed socio-economical landscaping.<br><br>
 <!-- bitcoin donate -->
                   <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
 						</div>
