--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           How cool would that be?<br>
           <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        This is about rescue aided with UAV that will fly over desert, search for you, drop water on you and return to tell your location. Here be soon more info about the development progress.
+        This is about UAV aided rescue in the desert. This plane will search for you, drop water on you and return to tell your location. Here be soon more info about the development progress as the site is daily updated.
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
