--- a/index.html
+++ b/index.html
@@ -5,23 +5,7 @@
     <title>UAV Bitstarter</title>
     <!-- todo1 responsive design in progress -->
     <!-- todo2 async flow control -->
-    <!-- v3.1
-    if you reed source code, you will find everything in the comments  
-    issues on github are enabled. github.com/ot4me/bitstarter/ 
-    this said (link to github) code sharing enabled, please think of the honor code (&childrem)
-    stop terrorism
-    this is the most complete, while still not auhtoritative, list of all addresses used for the project: 
-    17P3fXbJwroibsdsf8L9Bxydzw8Hmwipaa
-    139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
-    1LiDptNHucM9fWCYJbczwjHVHWA6Ce3wRG
-    18Pm4JuVdy2q8kVy374Xr4fMkfA9RmWiBd
-    15SN6z8Jk9e8cFwdBrvLHSWHudTKCgijk9
-    last update 2013-08-27 11:22:00 
-    some examples of block chain exploring urls:
-    http://blockexplorer.com/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
-    https://blockchain.info/address/139H9TpgZY9Y199NNaz8ZgZQ9oi7JeCrdr
-    https://coinbase.com/api/doc
-    -->
+    <!-- v3.1 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css">
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
@@ -232,8 +216,7 @@
                   <img class="img-polaroid" src="http://industrial.sk/img/TechPod5.png"><br>
                   peek view inside of the prototype<br><br>
 <!-- bitcoin donate -->
-                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
-					 	   </div>
+<a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>					 	   </div>
 					   </div>
 		    	</div>
 		   		<!-- repetitive area end -->
@@ -250,7 +233,7 @@
               <br> 
               The other challenge (short-term) is the <a href="http://startupmooc.org/">course leaderboard</a> where I entered this project and the generated social and financial feedback is bein measuerd. That could explain all the donate/tweed socio-economical landscaping.<br><br>
 <!-- bitcoin donate -->
-                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
+<a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 						</div>
 					</div>
 				</div>
@@ -271,8 +254,7 @@
                 <li>low entry barier (no bank account needed, no SSL certificates required to implement payments)</li>
               </ul><br><br>
 <!-- bitcoin donate -->
-                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>              
-						</div>
+<a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>						</div>
 					</div>
 			  </div>		
         <div class="accordion-group">
@@ -284,19 +266,16 @@
             <div id="collapseFour" class="accordion-body collapse">
                <div class="accordion-inner">
                 ATM:<br> 
-                - more flights, aerial pictures;<br>
+                - more flights, taking aerial pictures;<br>
                 - new parachutes tests.<br>
                 Near future:<br>
                 - target recognition in the aerial pictures;<br>
                 - upgrade camera and more tests.<br>
-                Less close future:<br>
+                Less near future:<br>
                 - bottle release mechanism (actually dropping the bottle from the plane);<br>
-                - automation (#dronesdronesdrones).<br>
-                Distant future:<br>
-                - ask Kenn ;)<br><br>
+                - automation (#dronesdronesdrones).<br><br>
 <!-- bitcoin donate -->
-                  <a class="coinbase-button" data-code="bbbbf0665bf5e313c80b4c92358dab1c" data-button-style="custom_small" data-custom="donation" href="https://coinbase.com/checkouts/bbbbf0665bf5e313c80b4c92358dab1c">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>               
-               </div>
+<a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>               </div>
              </div>
         </div>
         <!-- repetitive area start -->
