--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
   </head>
   <body>
 
+    <div class="container">
   	<div class="navbar navbar-inverse navbar-fixed-top">
   		<div class="navbar-inner">
   			<div class="container">
@@ -133,7 +134,6 @@
   		</div>
   	</div>
 
-  	<div class="container">
   		<!--div class="row-fluid heading">
   			<div class="span12">
   				<h1>building UAVs for the next competition</h1>
@@ -143,7 +143,7 @@
   	<div class="row-fluid heading">
   		<div class="span12">
   			<p class="lead">delivering bottled water in the desert, on autopilot.</p>
-  		</div>
+  		</div><a id="about"></a>
   	</div>
 
   	<!--div class="row-fluid pitch">
@@ -154,15 +154,15 @@
       </div>
     </div-->
 
-	<div class="row-fluid section2"><a id="about"></a>
+	<div class="row-fluid section2">
   		<div class="span5 offset1 copy copy-right">
   			<p>Imagine you're lost in the desert, thirsty with no water. It's hot there.<br>
-          This UAVcould find you and drop you a bottle.<br>
-          <br>
-          How cool would that be?<br>
-          <br> 
+        <br>This UAVcould find you and drop you a bottle.<br>
+        <br>How cool would that be?<br>
+        <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
-        This is about UAV aided rescue in the desert. This plane will search for you, drop water on you and return to tell your location. Here be soon more info about the development progress as the site is daily updated.
+        UAV aided rescue: this plane will search for you, drop you water and report your location.<br> 
+        Here be soon more info about the development progress as the site updates daily.
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
@@ -177,7 +177,7 @@
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
   		</div>
   		<div class="span5 copy">
-        <p>The plane in the pictures is the current prototype, carying the computer board, batteries, camera and antennas.</p>
+        <p>Pictures show current prototype, carying the computer boards, batteries, camera and antennas.</p>
         <p><a id="contact"></a>
           Contact:<br>
           <a href="http://www.hackerspace.lu/">meet us</a> in Strassen, Luxembourg<br>
