--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     </div-->
 
 	<div class="row-fluid section2">
-  		<div class="span6 offset1 copy copy-right">
+  		<div class="span6 copy copy-right">
   			<p>Imagine you're lost in the desert, thirsty with no water. It's hot there.<br>
         <br>This UAVcould find you and drop you a bottle.<br>
         <br>How cool would that be?<br>
@@ -173,7 +173,7 @@
   	</div>
 
   	<div class="row-fluid section3">
-  		<div class="span6 offset1 asset">
+  		<div class="span6 asset">
   			<img class="img-polaroid" src="http://industrial.sk/img/TechPod2.png">
   		</div>
   		<div class="span5 copy">
@@ -188,7 +188,7 @@
 
 <!-- if faq do not use <p> -->
   	<div class="row-fluid faq">
-		  <div class="span11 offset1">
+		  <div class="span11">
 			 <div class="accordion" id="accordion2">
 				<!-- repetitive area start -->
 	    		<div class="accordion-group">
@@ -300,7 +300,7 @@
 	</div>
 
 	<div class="row-fluid footer">
-		<div class="span12">
+		<div class="span11">
 			<p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>, without all the cruft that would otherwise be put at the bottom of the page.
 			</p>
 		</div>
