--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
   	<div class="row-fluid heading">
   		<div class="span12">
-  			<p class="lead">how to drop a bottle of water from a plane, on autopilot.</p>
+  			<p class="lead">dropping you water when you most need it, on autopilot.</p>
   		</div>
   	</div>
 
@@ -194,17 +194,18 @@
 					</div>
 					<div id="collapseTwo" class="accordion-body collapse">
 						<div class="accordion-inner">
-							To take off, fly over the desert and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified, try to hit it with the bottle of water, remember location of the drop zone and return.<br>
-               The bottle must land within 100 meters of the target, preferably closer and contain 500 ml of life saving liquid. The plane must return to the starting point. And the bottle should not break on landing.<br>
-              Napkin estimate is around $3k to be raised before end of the year. Split that between kickstarter (us$/credit card/paypal) and crypto currency bitcoin and see where we are.<br><br> 
-              At the time of writing the bitcoin counter from <a href="http://startupmooc.org/">leaderboard</a> showd . I entered this project as my homework for CS184. Board measures the social and financial feedback from the network. What counts are tweets including "9to5passion.eu" or "http://9to5passion.eu" and linked purchases/donations using bitcoin.
+							To take off, fly over the specified area and search for a human (adult) sized figurine (dressed in a yellow shirt and blue trousers). Once the target is identified, try to hit it with the bottle of water, note drop zone location and return to the starting base.<br>
+               The bottle must land within 100 meters of the target and contain 500 ml of life saving liquid. The plane must return to the place where it took off. The bottle should not break on landing.<br>
+               This is the challenge.<br><br>
+              Napkin estimate is around $3k to be raised before end of the year. There will be a kickstarter trying to crowdsource in that amount us$ when the competition will be aproaching.<br><br> 
+              Right now you can support this project by tweeting about it to your followers or donating bitcoins. The reference score board is <a href="http://startupmooc.org/">here</a>. Check out the UAV bitstarter ranging among other final projects of the CS184 class. The board measures both the social and financial feedback. It counts public tweets which iclude the "9to5passion.eu" url (or "http://9to5passion.eu") and the sum of purchases/donations to this project using bitcoin.
 						</div>
 					</div>
 				</div>
 				<div class="accordion-group">
 	    		<div class="accordion-heading">
 						<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseThree">
-						.why to support this project using bitcoins
+						.why & how to support this project using bitcoin
 						</a>
 					 </div>
 					 <div id="collapseThree" class="accordion-body collapse">
@@ -219,7 +220,9 @@
               </ul><br><br>
 <!-- bitcoin donate -->
 <a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
-              <br>issue with donations/purchases. Score board requests only sum of purchases linked to the account. It's no good to donate without confirming the payment (please click on the button 'confim payment'), the numbers do not add up. They show up in the coinbase account, are not lost or anything, just the score is lower than it could be if all your donations arrived as confirmed donation/purchase.<br><br>Best results achieved with payment from coinbase account, confirms/links instantly and you pay no transaction fees.
+              <br>issue with donations/purchases: Score board shows only sum of so called linked purchases. It's no good to donate without confirming the payment. First click on the button 'donate bitcoins', then follow the instructions in the popup from coinbase.com and at the end click on 'confim payment' to finish the coinbase purchase/donation. simple bitcoin transfer does not updates the score board ;). 
+              <br><br>
+              Best results achieved when payment originates from a coinbase account, confirms/links instantly and you save yourself transaction fees.
 						</div>
 					</div>
 			  </div>		
