removed title of the project

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <br> 
 				<!-- What started as <a href="https://www.coursera.org/course/startup">class</a> project (code typing excercise) is evolving into a fully featured fundraising site for a real project.<br--> 
         UAV aided rescue: this plane is designed to search for you and report your location. It's called TechPod.<br> 
-        Next version will carry the bottle and a release mechanism.<br> Here will be new stuff posted on regular basis.
+        Next version will carry the bottle and a release mechanism to drop the bottle on you once it finds you.<br> New stuff posted weekly.
         <!--Please preview herewith the project site and do not hesitate to tweet about it (bad PR is still better than no PR so hit us with feedback (and/or bitcoins)).<br -->
         <!-- The $3,000 is a total placeholder and also first estimate of material costs (cameras, aviation electronics, plane parts). We'll publish detailed list of material as the fundraising accelerates.<br>
         There are no tiers of support defined right now. No items chosen to be given away to supporters above certain tresholds. Just go to 'Donate bitcoins' pick a value or enter your own and send us a token of your appreciation. Or retweet.--></p>
