--- a/index.html
+++ b/index.html
@@ -211,7 +211,8 @@
                 <li>low entry barier (no bank account needed, no SSL certificates required to implement payments)</li>
               </ul><br><br>
 <!-- bitcoin donate -->
-<a class="coinbase-button" data-code="77baf5d84949d24d39b326861373b9ec" data-button-style="custom_large" data-custom="donation" href="https://coinbase.com/checkouts/77baf5d84949d24d39b326861373b9ec">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<a class="coinbase-button" data-code="037b27a3b16510e6d1c165155d501d80" data-button-style="custom_small" data-custom="new order" href="https://coinbase.com/checkouts/037b27a3b16510e6d1c165155d501d80">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
               <br>issue with donations/purchases: Score board shows only sum of so called linked purchases. It's no good to donate without confirming the payment. First click on the button 'donate bitcoins', then follow the instructions in the popup from coinbase.com and at the end click on 'confim payment' to finish the coinbase purchase/donation. simple bitcoin transfer does not updates the score board ;). 
               <br><br>
               Best results achieved when payment originates from a coinbase account, confirms/links instantly and you save yourself transaction fees.
