--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- v3.1 -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="http://9to5passion.eu/css/bootstrap-responsive.css">
+    <link rel="stylesheet" type="text/css" href="http://9to5passion.eu/css/bootstrap.css">
     <!-- top navbar menu --><link href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700," rel="stylesheet" type="text/css">
